--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   web:
-    image: boda-web:master
+    image: boda-web:dev
     build:
       context: .
       dockerfile: Dockerfile
